ajout paragraphe intro

--- a/edla/intro.tex
+++ b/edla/intro.tex
@@ -1,10 +1,5 @@
-\chapter{Introduction}
-
-L'homme utilise continuellement ses mains de manière naturelle. Nous 
-sommes extrêmement précis et habile avec elles. Elles nous permettent 
-de resentir de très fins détails. Au jour de l'écriture de cette état 
-de l'art, utiliser les mains pour interagir avec un ordinateur est encore 
-limité.\\
+\chapter*{Introduction}
+\addcontentsline{toc}{chapter}{Introduction}
 
 Durant notre master IVI\footnote{Le master Image Vision Interaction est 
 l'un des parcours des masters informatiques de l'université de Lille 1}, 
@@ -14,3 +9,27 @@ modélisation 3D et aux dernières techniques d'acquisition. Dans un premier tem
 nous réalisons un état de l'art ainsi qu'un prévisionnel afin de déterminer 
 les solutions adéquates pour notre problème et de plannifier les tâches qui
 seront à réaliser pour la réussite du projet.\\
+
+L'homme utilise continuellement ses mains de manière naturelle. Nous 
+sommes extrêmement précis et habile avec elles. Elles nous permettent 
+de resentir de très fins détails. Au jour de l'écriture de cette rapport,
+utiliser les mains pour interagir avec un ordinateur reste encore limité.\\
+
+Les études sont nombreuses, dans les domaines de la détection des mains 
+et de leurs poses, ainsi que le suivit de celle-ci et la reconstruction 
+3D des articulation des mains et de leurs formes. Cela fait plusieurs années, 
+que la recherche scientique et les techniques d'acquisition évoluent. 
+Dans les années 90, la littérature considère principalement les caméras 
+dont la sorti est RGB. Les méthodes proposent généralement la détection 
+de la main, de sa pose et de sa forme. Ensuite des techniques utilisant 
+plusieurs caméras et un systèmes de marquage sont apparus. Enfin, depuis 
+les années 2005, les caméras de profondeurs ont permis l'amélioration 
+et la création de certaines techniques. Maintenant, il existe des méthodes 
+accès permettant de retrouver les articulations des mains et leurs 
+reconstructions 3D. Les enjeux de ces recherches sont d'autant plus 
+intéressant actuellement, avec le développement des interfaces 
+immersives.\\
+
+
+
+
