ajout image pseudo haar

--- a/edla/solution.tex
+++ b/edla/solution.tex
@@ -40,9 +40,9 @@ Cette méthode se repose sur le calcul de la fonction énergie.
 
 \section{Détection de la main}
 
-La Kinect possède deux type de caméra, une caméra couleur et une caméra de profondeur. Il plusieurs solutions
-utilisant l'une ou l'autre de ces caméras. Nous allons dans cette partie détailler l'ensemble des solutions
-existante.
+La Kinect possède deux type de caméra, une caméra couleur et une caméra de profondeur utilisant la méthode 
+\og Time of Flight \fg. Il existe plusieurs solutions utilisant l'une ou l'autre de ces caméras. Nous allons
+dans cette partie détailler plusieurs solutions réalisé jusqu'à maintenant.
 
 \subsection{Détection et suivi de la main à partir d'une image couleur}
 La méthode proposé par S. Bilal et al \cite{} utilise l'algorithme de Viola et al \cite{viola2001jones} afin
