modification taille image

--- a/edla/presentation.tex
+++ b/edla/presentation.tex
@@ -41,3 +41,8 @@ champ de vision n'est pas assez important pour diverse application.
 L'objectif de notre projet est d'utiliser la Kinect 2 dans le but de détecter les différentes articulations
 de la main et de modéliser celle-ci dans une application Unity.
 %TODO ajouter les différentes étape de nos recherches 
+
+\section{Présentation de la Kinect 2}
+%présentation du materiel + image materiel
+%présentation des données brut
+%présentation du sdk + image squelette
