--- a/edla/intro.tex
+++ b/edla/intro.tex
@@ -5,10 +5,7 @@ Durant notre master IVI\footnote{Le master Image Vision Interaction est
 l'un des parcours des masters informatiques de l'université de Lille 1}, 
 nous avons l'occasion de réaliser un projet orienté recherche. Nous avons 
 sélectionné le sujet \og Hand Kinect \fg, car nous nous intéressons à la 
-modélisation 3D et aux dernières techniques d'acquisition. Dans un premier temps,
-nous réalisons un état de l'art ainsi qu'un prévisionnel afin de déterminer 
-les solutions adéquates pour notre problème et de plannifier les tâches qui
-seront à réaliser pour la réussite du projet.\\
+modélisation 3D et aux dernières techniques d'acquisition. \\
 
 L'homme utilise continuellement ses mains de manière naturelle. Nous 
 sommes extrêmement précis et habile avec elles. Elles nous permettent 
@@ -30,6 +27,15 @@ reconstructions 3D. Les enjeux de ces recherches sont d'autant plus
 intéressant actuellement, avec le développement des interfaces 
 immersives.\\
 
+% problèmatique
+
+% plan
+Dans un premier temps, nous décrivons notre projet, afin de comprendre 
+précisement le problème et les enjeux liés au projet. Esuite, nous réalisons 
+un état de l'art ainsi qu'un prévisionnel afin de déterminer les solutions 
+adéquates pour notre problème et de plannifier les tâches quiseront à 
+réaliser pour la réussite du projet. Enfin, nous déterminons la meilleur 
+solution pour notre projet.
 
 
 
