--- a/edla/solution.tex
+++ b/edla/solution.tex
@@ -45,7 +45,7 @@ La Kinect possède deux type de caméra, une caméra couleur et une caméra de p
 dans cette partie détailler plusieurs solutions réalisé jusqu'à maintenant.
 
 \subsection{Détection et suivi de la main à partir d'une image couleur}
-La méthode proposé par S. Bilal et al \cite{} utilise l'algorithme de Viola et al \cite{viola2001jones} afin
+La méthode proposé par S. Bilal et al \cite{haarlike} utilise l'algorithme de Viola et al \cite{viola2001jones} afin
 de détecter la main et fournir la position de celle-ci en créant une ROI\footnote{Region Of Interest} autour d'elle.
 L'algorithme de Viola et al \cite{viola2001jones} nécessite une 
 base de connaissances composée des caractéristiques de l'objet recherché. Elle est utilisée dans un 
@@ -66,8 +66,8 @@ afin de pouvoir différencier la main du reste de l'environnement. Pour cela, S.
 d'utiliser l'espace YCbCr qui permet d'obtenir des informations de chromaticité dont la valeur est presque équivalente
 quelque soit la couleur de peau de l'utilisateur \cite{yoo1999fast}. Une fois que la ROI de la main est binarisé, il est possible
 de détecter le bout des doigts. Il faut tout d'abord calculer le centroide de la forme de la main, puis la distance entre
-ce centroide et chaque point du contour de la main. Cela permet d'obtenir un graphe correspondant à la Fig. \ref{fig:handHisto}, où chaque
-pique représente un doigt.
+ce centroide et chaque point du contour de la main. Le coutour d'une forme dans une image est défini par un changement brutale
+de couleur. Cette méthode permet d'obtenir un graphe correspondant à la Fig. \ref{fig:handHisto}, où chaque pique représente un doigt.
 
 \begin{figure}[!h]
 \center
@@ -76,9 +76,12 @@ pique représente un doigt.
 \label{fig:handHisto}
 \end{figure}
 
+%TODO ajout du suivi de la main avec kalman
+
 \subsection{Détection et suivi de la main avec une image de profondeur}
+Une seconde solution utilise une image de profondeur plutôt que l'image binarisé grâce au changement d'espace colrimétrique.
 Pour réaliser la détection de la main, il faut dans un premier temps déterminer une ROI
-autour ce celle-ci. Cette première étape a été expliqué dans \cite{export:238453}, où les auteurs utilise un classifieur
+autour ce celle-ci. Cette première étape a été expliqué par T. Sharp et al\cite{export:238453}, où les auteurs utilise un classifieur
 qui se repose sur la méthode développé dans \cite{export:145347}. Ce classifieur permet d'effectuer de la reconnaissance
 des parties du corps et permet également de détecter les articulations.
 
@@ -93,12 +96,19 @@ des parties du corps et permet également de détecter les articulations.
 \newpage
 
 On voit sur la Fig. \ref{fig:bodyrecognition} que l'articulation de la main est détecté, il est alors possible de construire
-une ROI autour de ce point. Cette méthode est a été implémenté dans la caméra Kinect.
+une ROI autour de ce point. Cette méthode a été implémenté dans la caméra Kinect.\\
 
 La méthode utilisé dans \cite{export:238453} ne nécessite aucune donnée provenant d'image antérieur. L'ensemble
 des calculs sont réalisés sur une image à partir d'une base de connaissance contenant différente posture de la
 main. Etant donnée qu'il est impossible de stocker toutes les postures de la main, la méthode de \cite{export:238453}
 calcule une fonction energy permettant de déterminer quel est la posture la plus représentative de celle de la main
-de l'utilisateur.
+de l'utilisateur. Cette fonction energy est calculé à partir des pixels du modèle et ceux de l'image de profondeur
+capturé par la caméra. Elle est défini par le calcul suivant :
+\begin{equation}
+ E^{au}(Z_{roi}, R_{roi}) = \sum_{ij} \bar{\rho(z_{ij}} - r_{ij})
+\end{equation}
+Dans cette équation, $z_{ij}$ représente la pixel à la position (i,j) dans le modèle et $r_{ij}$ représente le pixel à la position (i,j)
+provenant de l'image de profondeur. La fonction $\rho(e)$ quand à elle est équivalent à $min(|e|,\tau)$ ou $\tau$ est une valeur fixe permettant
+d'éliminer le bruit présent dans l'image de profondeur.
 
 \section{Evaluation des solutions envisagées}
