fin problèmatique intro et début problèmatique présentation

--- a/edla/intro.tex
+++ b/edla/intro.tex
@@ -12,6 +12,7 @@ sommes extrêmement précis et habile avec elles. Elles nous permettent
 de resentir de très fins détails. Au jour de l'écriture de cette rapport,
 utiliser les mains pour interagir avec un ordinateur reste encore limité.\\
 
+% état de la question
 Les études sont nombreuses, dans les domaines de la détection des mains 
 et de leurs poses, ainsi que le suivit de celle-ci et la reconstruction 
 3D des articulation des mains et de leurs formes. Cela fait plusieurs années, 
@@ -23,11 +24,19 @@ plusieurs caméras et un systèmes de marquage sont apparus. Enfin, depuis
 les années 2005, les caméras de profondeurs ont permis l'amélioration 
 et la création de certaines techniques. Maintenant, il existe des méthodes 
 accès permettant de retrouver les articulations des mains et leurs 
-reconstructions 3D. Les enjeux de ces recherches sont d'autant plus 
+reconstructions 3D. Les résultats de ces recherches se retrouve dans les 
+nouvelles IHM\footnote{Interactions Homme-Machine}, afin de contrôler, 
+interaction et communiquer avec une machine. Les enjeux sont d'autant plus 
 intéressant actuellement, avec le développement des interfaces 
 immersives.\\
 
 % problèmatique
+Dans ce domaine, les problèmatiques actuelles sont variées. Il est 
+nécessaire de détection les acticulation de la main de manière précise. 
+Les variations de luminausité sont courrante, il faut être robuste à 
+ces variations. L'application doit être temps réel, pour fonctionné de 
+manière interactif.\\
+
 
 % plan
 Dans un premier temps, nous décrivons notre projet, afin de comprendre 
