--- a/edla/presentation.tex
+++ b/edla/presentation.tex
@@ -35,6 +35,13 @@ différentes articulation du corps humain.
 %a revoir
 D'autre outils permettent de détecter les mains des utilisateurs, cependant leur
 champ de vision n'est pas assez important pour diverse application.
+%a revoir
+Puisque, 
+les mains sont très habile, il peut être difficile de detecter de leurs 
+articulations dans des positions contraignante. Les problèmes liés à 
+la luminausitée sont récurrents, il est souhaitable d'utiliser des 
+techniques robustent et invariantent à la luminausitée, et qui restent 
+efficace.
 
 %comment réaliser ce projet, avec quoi + résultat attendu
 \section{Objectif}
