ajout d'une correction dans problematique

--- a/edla/intro.tex
+++ b/edla/intro.tex
@@ -32,7 +32,7 @@ immersives.\\
 
 % problèmatique
 Dans ce domaine, les problèmatiques actuelles sont variées. Il est 
-nécessaire de détection les acticulation de la main de manière précise. 
+nécessaire de détecter les acticulations de la main de manière précise. 
 Les variations de luminausité sont courrante, il faut être robuste à 
 ces variations. L'application doit être temps réel, pour fonctionné de 
 manière interactif.\\
