Modification de la partie 'Différents types de données'

--- a/edla/presentation.tex
+++ b/edla/presentation.tex
@@ -61,6 +61,7 @@ Le SDK de la Kinect fournit des informations déjà traitées.
 Par exemple pour notre projet, les jointures du poignet, du centre de la main, du sommet du pouce et du sommet du majeur.
 
 \begin{figure}[!h]
+\center
 \includegraphics[width=7cm]{images/kinec2_skel.png}
 \end{figure}
 
