--- a/edla/solution.tex
+++ b/edla/solution.tex
@@ -7,17 +7,21 @@ quels autres moyens auraient pu être utilisés pour réaliser ce projet.\\
 
 Une liste non exhaustive des périphériques et des données utile qu'ils fournissent : 
 \begin{itemize}
-\item Kinect et Kinect 2 de Microsoft, fournissent en données brutes une image RGB ainsi qu'une image de profondeur. 
-En utilisant le SDK fournis, on dispose en plus nombreux outils parmi lesquels une détection du squelette et pour Kinect 2 
-une abstraction de la main avec 3 points détectés : le centre du poignet, le sommet de pouce et le sommet du majeur. 
-\item LeapMotion et LeapMotion 2, fournissent en données brutes une image de profondeur plus détaillée mais sur une zone 
-plus restreinte. Avec le SDK, on a accès à 
-%% TODO se renseigner sur le SDK et la technologie LeapMotion
-\item RealSense 
+  \item Kinect et Kinect 2 de Microsoft, fournissent en données brutes une image couleur ainsi qu'une image de profondeur. 
+En utilisant le SDK fournis, on dispose en plus de nombreux outils parmi lesquels une détection du squelette et pour Kinect 2 
+une abstraction de la main avec 4 points détectés : le centre du poignet, le centre de la main, le sommet de pouce et le sommet du majeur. 
+  \item LeapMotion et LeapMotion 2, fournissent en données brutes une image de profondeur plus détaillée mais sur une zone 
+plus restreinte. Avec le SDK, on a accès directement à un squelette très détaillé de la main :
+    \begin{figure}[!h]
+    \center
+    \includegraphics[width=7cm]{images/SDK_LeapMotion.png}
+    \end{figure}
+  \item RealSense est un périphérique relativement récent à mis chemin entre Kinect 2 et LeapMotion. On peut, à l'aide du SDK fournis, récupérer des informations semblables à celles fournies par LeapMotion : 
+  22 points de la main détectés et suivits
 \end{itemize}
 \ \\
 Les données en RGB peuvent être utiliser avec des accessoires pour utilisées pour simplifier la détection des points de la main. \cite{wang2009real} 
-Elles peuvent également être associées avec des données de profondeur pour améliorer la détection et gérer les cas de superposition \cite{van2011combining}
+Elles peuvent également être associées avec des données de profondeur pour améliorer la détection et gérer les cas de superposition. \cite{van2011combining}
 
 \section{Modélisation de la main}
 %input
