correction de phrases

--- a/edla/presentation.tex
+++ b/edla/presentation.tex
@@ -54,7 +54,7 @@ La Kinect 2 de Microsoft possède une caméra couleur en mode YUV de 1920x1080 p
 YUV est une combination particulière d'information pour restituer la couleur, comme RGB ou HSP.
 Cette combinaison aussi appelée YCbCr, avec Y la luminance, U/Cb la composante bleu sans luminance et V/Cr la composante rouge sans luminance
 En plus de sa caméra, elle possède 3 diffuseur de rayonnement infrarouges qui servent à dessiner une carte de profondeur.
-Les autres fonctionnalités ne nous intéresseront pas résoudre notre problèmatique.
+Les autres fonctionnalités ne nous intéresseront pas résoudre notre problèmatique.\\
 
 On récupère donc de Kinect les données brutes suivantes : 
 \begin{itemize}
@@ -62,8 +62,7 @@ On récupère donc de Kinect les données brutes suivantes :
  \item un flux vidéo d'images de profondeur
 \end{itemize}
 
-Ces deux flux peuvent servir à détecter la main (méthodes expliquées dans la partie état de l'art)
-
+Ces deux flux peuvent servir à détecter la main (méthodes expliquées dans la partie état de l'art).
 Le SDK de la Kinect fournit des informations déjà traitées. 
 Par exemple pour notre projet, les jointures du poignet, du centre de la main, du sommet du pouce et du sommet du majeur.
 
