--- a/edla/intro.tex
+++ b/edla/intro.tex
@@ -9,7 +9,7 @@ modélisation 3D et aux dernières techniques d'acquisition. \\
 
 L'homme utilise continuellement ses mains de manière naturelle. Nous 
 sommes extrêmement précis et habile avec elles. Elles nous permettent 
-de resentir de très fins détails. Au jour de l'écriture de cette rapport,
+de resentir des détails très fins. Au jour de l'écriture de cette rapport,
 utiliser les mains pour interagir avec un ordinateur reste encore limité.\\
 
 % état de la question
@@ -45,6 +45,5 @@ un état de l'art ainsi qu'un prévisionnel afin de déterminer les solutions
 adéquates pour notre problème et de plannifier les tâches quiseront à 
 réaliser pour la réussite du projet. Enfin, nous déterminons la meilleur 
 solution pour notre projet.
-
 
 
