correction orthographe de la 1er partie elliot

--- a/edla/biblio.bib
+++ b/edla/biblio.bib
@@ -106,3 +106,14 @@ month={Aug},}
   year={1999},
   publisher={Elsevier}
 }
+
+//pour l'algo de kalman
+@INPROCEEDINGS{kalman,
+author={Jie Yang and Waibel, Alex},
+booktitle={Applications of Computer Vision, 1996. WACV '96., Proceedings 3rd IEEE Workshop on},
+title={A real-time face tracker},
+year={1996},
+pages={142-147},
+keywords={cameras;image colour analysis;motion estimation;real-time systems;stochastic processes;teleconferencing;tracking;Canon VC-Cl camera;HCI applications;HP-9000 workstation;camera model;camera motion compensation;camera motion prediction;framegrabber;gaze tracking;human faces;image motion estimation;lighting conditions;lip reading;motion model;poses;real-time face tracker;search window prediction;skin color distributions;stochastic model;teleconferencing;views;Cameras;Computer science;Face detection;Face recognition;Humans;Motion estimation;Predictive models;Real time systems;Stochastic processes;Workstations},
+doi={10.1109/ACV.1996.572043},
+month={Dec},}
