ajout des legendes aux images

--- a/edla/presentation.tex
+++ b/edla/presentation.tex
@@ -56,6 +56,12 @@ Cette combinaison aussi appelée YCbCr, avec Y la luminance, U/Cb la composante 
 En plus de sa caméra, elle possède 3 diffuseur de rayonnement infrarouges qui servent à dessiner une carte de profondeur.
 Les autres fonctionnalités ne nous intéresseront pas résoudre notre problèmatique.\\
 
+\begin{figure}[!h]
+ \center
+ \includegraphics[width=9cm]{images/Kinect2.jpeg}
+ \caption{Caméra Kinect 2}
+\end{figure}
+
 On récupère donc de Kinect les données brutes suivantes : 
 \begin{itemize}
  \item un flux vidéo couleur en YUV
@@ -69,6 +75,7 @@ Par exemple pour notre projet, les jointures du poignet, du centre de la main, d
 \begin{figure}[!h]
 \center
 \includegraphics[width=7cm]{images/kinec2_skel.png}
+\caption{Squelette de l'utilisateur détecté par la Kinect 2}
 \end{figure}
 
 %présentation du materiel + image materiel
