fixe quelques fautes intro

--- a/edla/intro.tex
+++ b/edla/intro.tex
@@ -2,14 +2,14 @@
 \addcontentsline{toc}{chapter}{Introduction}
 
 Durant notre master IVI\footnote{Le master Image Vision Interaction est 
-l'un des parcours des masters informatiques de l'université de Lille 1}, 
+une spécialité du master informatique de l'université de Lille 1}, 
 nous avons l'occasion de réaliser un projet orienté recherche. Nous avons 
 sélectionné le sujet \og Hand Kinect \fg, car nous nous intéressons à la 
-modélisation 3D et aux dernières techniques d'acquisition. \\
+modélisation 3D et aux dernières techniques d'acquisition.\\
 
 L'homme utilise continuellement ses mains de manière naturelle. Nous 
 sommes extrêmement précis et habile avec elles. Elles nous permettent 
-de resentir des détails très fins. Au jour de l'écriture de cette rapport,
+de resentir des détails très fins. Au jour de l'écriture de ce rapport,
 utiliser les mains pour interagir avec un ordinateur reste encore limité.\\
 
 % état de la question
