recentrer logo lille1

--- a/edla/main.tex
+++ b/edla/main.tex
@@ -48,7 +48,6 @@
 }
 
 
-%TODO revoir le titre ce n'est plus juste un état de l'art
 
 \begin{document}
 
@@ -91,14 +90,14 @@
   }
 \end{flushright}
 
-\vspace{4cm}
+\vspace{3.5cm}
 
 \begin{center}
-  \includegraphics[height=3.5cm]{images/logoLILLE1.jpg}
-  \hfill
+  \includegraphics[height=4.5cm]{images/logoLILLE1.jpg}
+  %\hfill
   % logo équipe
   %\includegraphics[height=3.5cm]{image/}
-  \vspace{4cm}
+  \vspace{3.5cm}
 
 
   {\large\textbf{Octobre 2015 à Février 2016}}
