ajout du diagramme

--- a/edla/previsionnel.tex
+++ b/edla/previsionnel.tex
@@ -46,4 +46,11 @@ Pour cela, il nous faudra utiliser la méthode décrite dans \cite{export:217428
 La dernière étape est de faire correspondre les articulations de la main détecté dans l'étape deux avec
 le mesh de la main. Cette méthode est expliqué dans \cite{export:217428}.
 
+\begin{figure}
+  \begin{center}
+    \includegraphics[angle=-90, width=4cm]{images/planning.png}
+    \caption{Planning du projet}
+    \label{fig:planning}
+  \end{center}
+\end{figure}
 %TODO expliquer quel sera la demo de fin
