--- a/edla/intro.tex
+++ b/edla/intro.tex
@@ -9,40 +9,40 @@ modélisation 3D et aux dernières techniques d'acquisition.\\
 
 L'homme utilise continuellement ses mains de manière naturelle. Nous 
 sommes extrêmement précis et habile avec elles. Elles nous permettent 
-de resentir des détails très fins. Au jour de l'écriture de ce rapport,
+de resentir des détails très fins. Au jour de l'écriture de ce rapport, 
 utiliser les mains pour interagir avec un ordinateur reste encore limité.\\
 
 % état de la question
 Les études sont nombreuses, dans les domaines de la détection des mains 
-et de leurs poses, ainsi que le suivit de celle-ci et la reconstruction 
-3D des articulation des mains et de leurs formes. Cela fait plusieurs années, 
-que la recherche scientique et les techniques d'acquisition évoluent. 
-Dans les années 90, la littérature considère principalement les caméras 
-dont la sorti est RGB. Les méthodes proposent généralement la détection 
-de la main, de sa pose et de sa forme. Ensuite des techniques utilisant 
-plusieurs caméras et un systèmes de marquage sont apparus. Enfin, depuis 
-les années 2005, les caméras de profondeurs ont permis l'amélioration 
-et la création de certaines techniques. Maintenant, il existe des méthodes 
-accès permettant de retrouver les articulations des mains et leurs 
-reconstructions 3D. Les résultats de ces recherches se retrouve dans les 
-nouvelles IHM\footnote{Interactions Homme-Machine}, afin de contrôler, 
-interaction et communiquer avec une machine. Les enjeux sont d'autant plus 
-intéressant actuellement, avec le développement des interfaces 
-immersives.\\
+et de leurs poses, ainsi que le suivi de celle-ci et la reconstruction 
+3D des articulations des mains et de leurs formes. Cela fait plusieurs 
+années, que la recherche scientifique et les techniques d'acquisition 
+évoluent. Dans les années 90, la littérature considère principalement les 
+caméras dont la sortie est RGB. Les méthodes proposent généralement la 
+détection de la main, de sa pose et de sa forme. Ensuite, des techniques 
+utilisant plusieurs caméras et des systèmes de marquage sont apparus. 
+Enfin, depuis les années 2005, les caméras de profondeur ont permis 
+l'amélioration et la création de certaines techniques. Maintenant, il 
+existe des méthodes permettant de retrouver les articulations des mains 
+et leurs reconstructions 3D. Les résultats de ces recherches se 
+retrouvent dans les nouvelles IHM\footnote{Interface Homme-Machine}, 
+afin de contrôler, interagir et communiquer avec une machine. Les enjeux 
+sont d'autant plus intéressants actuellement, avec le développement des 
+interfaces immersives.\\
 
 % problèmatique
-Dans ce domaine, les problèmatiques actuelles sont variées. Il est 
-nécessaire de détecter les acticulations de la main de manière précise. 
-Les variations de luminausité sont courrante, il faut être robuste à 
-ces variations. L'application doit être temps réel, pour fonctionné de 
-manière interactif.\\
+Dans ce domaine, les problématiques actuelles sont variées. Il est 
+nécessaire de détecter les articulations de la main de manière précise. 
+Les variations de luminosité sont courantes, la méthode doit être robuste 
+à ces variations. L'application doit être temps réel, pour fonctionner de 
+manière interactive.\\
 
 
 % plan
 Dans un premier temps, nous décrivons notre projet, afin de comprendre 
-précisement le problème et les enjeux liés au projet. Esuite, nous réalisons 
-un état de l'art ainsi qu'un prévisionnel afin de déterminer les solutions 
-adéquates pour notre problème et de plannifier les tâches quiseront à 
-réaliser pour la réussite du projet. Enfin, nous déterminons la meilleur 
-solution pour notre projet.
+précisément le problème et les enjeux liés au projet. Ensuite, nous 
+réalisons un état de l'art ainsi qu'un prévisionnel afin de déterminer 
+les solutions adéquates pour notre problème et de planifier les tâches 
+qui seront à réaliser pour la réussite du projet. Enfin, nous déterminons 
+la meilleure solution pour notre projet.\\
 
