--- a/edla/intro.tex
+++ b/edla/intro.tex
@@ -8,8 +8,8 @@ sélectionné le sujet \og Hand Kinect \fg, car nous nous intéressons à la
 modélisation 3D et aux dernières techniques d'acquisition.\\
 
 L'homme utilise continuellement ses mains de manière naturelle. Nous 
-sommes extrêmement précis et habile avec elles. Elles nous permettent 
-de resentir des détails très fins. Au jour de l'écriture de ce rapport, 
+sommes extrêmement précis et habiles avec elles. Elles nous permettent 
+de ressentir des détails très fins. Au jour de l'écriture de ce rapport, 
 utiliser les mains pour interagir avec un ordinateur reste encore limité.\\
 
 % état de la question
