change taille img

--- a/edla/solution.tex
+++ b/edla/solution.tex
@@ -14,7 +14,7 @@ une abstraction de la main avec 4 points détectés : le centre du poignet, le c
 plus restreinte. Avec le SDK, on a accès directement à un squelette très détaillé de la main.
     \begin{figure}[!h]
     \center
-    \includegraphics[width=7cm]{images/SDK_LeapMotion.png}
+    \includegraphics[width=350px]{images/SDK_LeapMotion.png}
     \caption{Squelette de la main de l'utilisateur détecté par la LeapMotion}
     \end{figure}
   \item RealSense est un périphérique relativement récent à mis chemin entre Kinect 2 et LeapMotion. On peut, à l'aide du SDK fournis, récupérer des informations semblables à celles fournies par LeapMotion : 
@@ -68,7 +68,7 @@ les masques noirs.\\
 
 \begin{figure}[!h]
 \center
-\includegraphics[width=7cm]{images/pseudo_haar.png}
+\includegraphics[width=200px]{images/pseudo_haar.png}
 \caption{Exemple de caractéristiques pseudo-Haar utilisées pour l'algorithme Viola et Jones}
 \label{fig:pseudo_haar}
 \end{figure}
@@ -83,7 +83,7 @@ de couleur. Cette méthode permet d'obtenir un graphe correspondant à la Fig. \
 
 \begin{figure}[!h]
 \center
-\includegraphics[width=7cm]{images/handHisto.png}
+\includegraphics[width=300px]{images/handHisto.png}
 \caption{Histogramme des distances entre les points du contour de la main et le centroide}
 \label{fig:handHisto}
 \end{figure}
@@ -104,7 +104,7 @@ des parties du corps et permet également de détecter les articulations.
 %TODO essayer d'expliquer mieu le fonctionnement de kinect
 \begin{figure}[!h]
  \begin{center}
-  \includegraphics[width=7cm]{images/bodyrecognition.png}
+  \includegraphics[width=300px]{images/bodyrecognition.png}
   \caption{Résultat de la détection des parties du corps et des articulations grâce à la méthode de \cite{export:145347}}
   \label{fig:bodyrecognition}
  \end{center}
